Archive2/fb/3c49c4dced54f6/output
main.cpp:1:1: error: stray '\303' in program
 / / Cada objeto do tipo sse_t serão alinhados para 16 bytes limite 
 ^
main.cpp:1:1: error: stray '\243' in program
main.cpp:7:1: error: stray '\303' in program
 / / Para o array "cacheline" será alinhado com 128 bytes de fronteira 
 ^
main.cpp:7:1: error: stray '\241' in program
main.cpp:1:1: error: expected unqualified-id before '/' token
 / / Cada objeto do tipo sse_t serão alinhados para 16 bytes limite 
 ^
main.cpp:7:1: error: expected unqualified-id before '/' token
 / / Para o array "cacheline" será alinhado com 128 bytes de fronteira 
 ^
